--- a/views/home.ejs
+++ b/views/home.ejs
@@ -708,7 +708,7 @@
                                         <p>General Manager</p>
                                     </div>
                                     <p>
-                                        A Software engineer by profession. Her passion towards web development & designing brought Ownvu technologies website live.
+                                        A <i>software engineer</i> by profession. Her passion towards web development & designing brought Ownvu technologies website live.
                                         She manage planning, assigning and deliverable among the team. She look forward for customer satisfaction through <i>Quality</i> product.
                                         She constantly encourage the team to give their best.
                                     </p>
