--- a/views/home.ejs
+++ b/views/home.ejs
@@ -799,7 +799,7 @@
                     </address>
                     <address class="single-address">
                         <h4>E-Mail</h4>
-                        <p>ownvutechnologies@gmail.com</p>
+                        <p>support@ownvutechnologies.com</p>
                     </address>
                 </div>
             </div>
