google analytics and minified js files

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="Ownvu Technologies provide home security system and Home automation." name="description">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>OwnVU : Home</title>
+    <title>Ownvu Technologies</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117423422-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-117423422-1');
+    </script>
+
+
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/icon" href="/images/ownvu/ownvu-logo-lg.png"/>
     <!-- Font Awesome -->
@@ -330,7 +343,7 @@
                                             <a class="fancybox" data-fancybox-group="gallery" href="/images/ownvu/products/cardless-1-lg.jpg"><i class="fa fa-eye"></i></a>
                                         </div>
                                         <div class="portfolio-title">
-                                            <h4>Cardless Phone</h4>
+                                            <h4>Cordless Phone</h4>
                                             <span>Telecommunication</span>
                                         </div>
                                     </div>
@@ -794,7 +807,7 @@
                     </address>
                     <address class="single-address">
                         <h4>Phone</h4>
-                        <p>Athiban: +91-9445616475</p>
+                        <p>Athiban: +91-8056277116</p>
                         <p>Krishna: +91-8807787060</p>
                     </address>
                     <address class="single-address">
@@ -817,7 +830,7 @@
                             <input type="email" class="form-control contactemail" name="contactemail" placeholder="Email" required>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control contactmsg" name="contactmsg" required></textarea>
+                            <textarea class="form-control contactmsg" name="contactmsg" placeholder="Enter " required></textarea>
                         </div>
                         <button data-text="SUBMIT" class="button button-default contact-submit"><span>SUBMIT</span></button>
                     </form>
@@ -863,25 +876,25 @@
 <script src="/js/rex/jquery1.11.3.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <!-- Bootstrap -->
-<script src="/js/rex/bootstrap.js"></script>
+<script src="/js/rex/bootstrap.min.js"></script>
 <!-- Slick Slider -->
-<script type="text/javascript" src="/js/rex/slick.js"></script>
+<script type="text/javascript" src="/js/rex/slick.min.js"></script>
 <!-- Counter -->
-<script type="text/javascript" src="/js/rex/waypoints.js"></script>
-<script type="text/javascript" src="/js/rex/jquery.counterup.js"></script>
+<script type="text/javascript" src="/js/rex/waypoints.min.js"></script>
+<script type="text/javascript" src="/js/rex/jquery.counterup.min.js"></script>
 <!-- mixit slider -->
 <script type="text/javascript" src="/js/rex/jquery.mixitup.js"></script>
 <!-- Add fancyBox -->
 <script type="text/javascript" src="/js/rex/jquery.fancybox.pack.js"></script>
 <!-- Wow animation -->
-<script type="text/javascript" src="/js/rex/wow.js"></script>
+<script type="text/javascript" src="/js/rex/wow.min.js"></script>
 
 <!-- Custom js -->
-<script type="text/javascript" src="/js/rex/custom.js"></script>
+<script type="text/javascript" src="/js/rex/custom.min.js"></script>
 
 <!--External plugins-->
 <script type="text/javascript" src="/js/sweetalert.min.js"></script>
-<script type="text/javascript" src="/js/bootstrapValidator.js"></script>
+<script type="text/javascript" src="/js/bootstrapValidator.min.js"></script>
 <script type="text/javascript" src="/js/home.js"></script>
 
 </body>
