key words added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta content="Ownvu Technologies provide home security system and Home automation." name="description">
+    <meta content="Ownvu Technologies provide home security system and Home automation. Ownvu Technologies is a self-motivated start-up with a team of 3 members. We are providing total IT solutions and home automation  along with  sales and service of security related products." name="description">
     <meta name="keywords" content="Ownvu,ownvu technologies,security system provider,cctv, telecommunication, seller, athiban, pendricve, laptop, bulb camera, LED, led, telephones"/>
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Ownvu Technologies</title>
