Added google adsense

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -898,6 +898,14 @@
 <script type="text/javascript" src="/js/bootstrapValidator.min.js"></script>
 <script type="text/javascript" src="/js/home.js"></script>
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-9641917034185605",
+        enable_page_level_ads: true
+    });
+</script>
+
 </body>
 <script>
 
