--- a/views/home.ejs
+++ b/views/home.ejs
@@ -239,7 +239,7 @@
                         <h2 class="tittle"><span>Service</span> we offer</h2>
                         <span class="tittle-line"></span>
                         <p>
-                            Control it all Or let our experts manage it for you. Either way, Ownvu Technologies Data Center pairs the agility you've come to expect from the cloud with the security and stability you can build your business on.
+                            Our expert team will manage the below mwntioned services for our parners and clients.
                         </p>
 
                     </div>
@@ -262,7 +262,7 @@
                                     <span class="fa fa-cloud service-icon"></span>
                                     <h4 class="service-title">Cloud Services</h4>
                                     <p>
-                                        We make service available to users on demand via the Internet from a cloud computing provider's servers as opposed to being provided from a company's own on-premises servers.
+                                        We make service available to clients on demand through online from a cloud - computing provider's servers since its opposed to  provide from a company's own premises servers.
                                     </p>
                                 </div>
                             </li>
@@ -270,7 +270,7 @@
                                 <div class="single-service wow slideInUp">
                                     <span class="fa fa-thumbs-up service-icon"></span>
                                     <h4 class="service-title">Doorstep Service</h4>
-                                    <p>When you call or submit a service request online, we will send a technician to you to pick your computer or laptop. Once at our repair facility, an experienced repair specialist will diagnose your machine and let you know what the best course of action is for your computer.</p>
+                                    <p>When customer submit a service request online or a call, we will be sending a professional/technician to you to pick your laptop or computer. After diagnosing  your machine ,we let you know the best course of action for your computer.</p>
                                 </div>
                             </li>
                             <li class="col-md-3 col-sm-6">
@@ -683,7 +683,7 @@
                         <h2 class="tittle">Meet Our Team</h2>
                         <span class="tittle-line"></span>
                         <p>
-                            As unique as we are individually, we share a mutual passion for technology and doing excellent work for our clients and partners. We pride ourselves on our strategic, integrated approach to public relations and the results it delivers.
+                            Though we are unique individually, we have a common & mutual passion towards technology and doing satisfactory & excelent work for our partners and clients.
                         </p>
                         <p>Get to know our <span class="aqua">Ownvu</span> team below.</p>
                     </div>
